logs/pyip.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/icmp.py'...
***   File "./lib/python3.5/site-packages/icmp.py", line 97
    raise ValueError, "CheckSum Error!"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ip.py'...
***   File "./lib/python3.5/site-packages/ip.py", line 173
    raise ValueError, "invalid source address"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping.py'...
***   File "./lib/python3.5/site-packages/ping.py", line 156
    print "%d bytes from %s (%s): icmp_seq=%d. time=%d. ms" % \
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyip-0.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/traceroute.py'...
***   File "./lib/python3.5/site-packages/traceroute.py", line 82
    except getopt.GetoptError, msg:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/udp.py'...
***   File "./lib/python3.5/site-packages/udp.py", line 69
    raise ValueError, packet
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
